get input sound's info by AudioWeb Api

--- a/generate-text-2.html
+++ b/generate-text-2.html
@@ -15,6 +15,6 @@
     	        <td><button onclick="test();">Test</button></td>
             </tr>
         </table>        
-        <script src="js/practice2.js"></script>
+        <script src="js/generate-text-2.js"></script>
     </body>
 </html>
