--- a/genarate-sound-2.html
+++ b/genarate-sound-2.html
@@ -5,9 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     </head>
     <body> 
-        <canvas id="oscilloscope" width="600" height="300">
-          An alternative text describing what your canvas displays. 
-        </canvas>
-        <script src="js/generate-sound-1.js"></script>
+        <button onclick="play();">PLay</button>
+        <script src="js/generate-sound-2.js"></script>
     </body>
 </html>
