add ntm on golang, more test

--- a/copytask.html
+++ b/copytask.html
@@ -25,7 +25,7 @@
             <button onclick="clear_table();">Clear</button>
             <button onclick="initModel();">Init model</button>
             <button onclick="train_ntm();">Train ntm</button>
-            <button onclick="test_ntm();">Test ntm</button>
+            <button onclick="test_ntm(1);test_ntm(2);">Test ntm</button>
             <table id="sample">
                 <tr>
                     <td style="background-color: hsl(0,100%,55%)"></td>
