delete unnecessary file

--- a/copytask.html
+++ b/copytask.html
@@ -20,12 +20,12 @@
             <input type="number" id="test-length">
             <br>
             <br>
-            <button onclick="train();">Train</button>
-            <button onclick="test();">Test</button>
+            <button onclick="train();">Train LSTM</button>
+            <button onclick="test();">Test LSTM</button>
+            <button onclick="initModel();">Init model NTM</button>
+            <button onclick="train_ntm();">Train NTM</button>
+            <button onclick="test_ntm(2);">Test NTM</button>
             <button onclick="clear_table();">Clear</button>
-            <button onclick="initModel();">Init model</button>
-            <button onclick="train_ntm();">Train ntm</button>
-            <button onclick="test_ntm(1);test_ntm(2);">Test ntm</button>
             <table id="sample">
                 <tr>
                     <td style="background-color: hsl(0,100%,55%)"></td>
