--- a/generate-sound.html
+++ b/generate-sound.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <script src="js/jquery-3.2.0.min.js"></script>
         <script src="js/synaptic.js"></script>
-        <script src="js/generate-sound-3.js"></script>
+        <script src="js/generate-sound.js"></script>
     </head>
     <body> 
         <input type='file' onchange='openFile(event)'>
