--- a/generate-text.html
+++ b/generate-text.html
@@ -7,7 +7,7 @@
     <body id="t" class="offline"> 
         <table>
             <tr>
-                <td colspan="3"><textarea rows="10" cols="50" id="textarea">Enter text here...</textarea></td>
+                <td colspan="3"><textarea rows="30" cols="50" id="textarea">Enter text here...</textarea></td>
             </tr>
             <tr>    
     	        <td><button onclick="read_and_train();">Read</button></td>
@@ -15,6 +15,6 @@
     	        <td><button onclick="test();">Test</button></td>
             </tr>
         </table>        
-        <script src="js/generate-text-2.js"></script>
+        <script src="js/generate-text.js"></script>
     </body>
 </html>
